# runlog.exe

./: .gitignore  CAPTURE_RESEARCH.md  LAUNCH.bat  LICENSE  PRODUCTION_TRACKING_README.md  README.md  ROADMAP.md  SETUP.md  START_HERE.md  SUCCESS.md  TODO-highlights-v2.md  TODO.md  UPLINK_DESIGN.md  install.bat  install_runlog.bat
backend/: .env.example  requirements.txt  run.py
backend/app/: __init__.py  ai_client.py  audio_sidecar.py  capture.py  config.py  crud.py  database.py  main.py  media_process.py  models.py  rust_recorder.py  schemas.py  utils.py  video_processor.py  wgc_capture.py
backend/app/alpha/: audio_analyzer.py  data_prep.py  digit_reader.py  grading.py  health.py  highlight_detector.py  hud_detector.py  hybrid_router.py  ocr_pipeline.py  processor.py  shell_classifier.py  templates.py  train_shell_classifier.py  validate.py  vocab.py
backend/app/api/: __init__.py  activity.py  ai.py  analytics.py  assets.py  calendar.py  capture_api.py  (+22 more)
backend/data/: Marathon_Complete_Database.xlsx
backend/recorder/: .gitignore  Cargo.toml
backend/recorder/src/: main.rs
data/: sonnet_metrics.json
data/backups/: runlog_20260317_212441.db  runlog_20260317_212838.db  runlog_20260317_225406.db
docs/: test-machines.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  vite.config.ts
frontend/electron/: auto-updater.js  backend-manager.js  main.js  overlay-preload.js  preload.js  recording-manager.js  screen-watcher.js  steam-watcher.js
frontend/src/: App-old.tsx  App.css  App.tsx  index.css
(+77 files in other folders)
