[package]
name = "runlog-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-capture = "1.5.0"
windows = { version = "0.61", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }

[profile.release]
opt-level = 3
lto = true
